--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,6 @@ jobs:
           echo "KEY_3=${KEY_3}" >> .env
           echo "PORT=${PORT}" >> .env
 
-      # Uncomment after setup pm2 to run node app
+      # Add after install pm2 on EC2 instance
       - name: Restart Node.js application with PM2
         run: pm2 restart my_node_app
