--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "sunnyappdev.com",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "dotenv": "^16.4.2",
     "express": "^4.18.2"
   }
